[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Wardroom.webm" type="VideoStream" id=1]
[ext_resource path="res://Wardroom.gd" type="Script" id=2]
[ext_resource path="res://assets/iconfinder_ic_skip_next_48px_352132.png" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WardroomScene" type="VideoPlayer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
stream = ExtResource( 1 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 464.0
margin_top = 536.0
margin_right = 560.0
margin_bottom = 576.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Skip"
icon = ExtResource( 3 )
expand_icon = true
[connection signal="finished" from="WardroomScene" to="." method="_on_WardroomScene_finished"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
